--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1 class="title">Weather App</h1>
     <div class="card">
         <div class="search">
             <input class="search-bar" type="text" placeholder="Enter Location" spellcheck="false">
@@ -18,6 +19,7 @@
             <img class="weather-icon">
             <div class="description"></div>
             <h1 class="temperature"></h1>
+            <p class="feels-like">Feels Like: <span></span></p>
             <h2 class="city"></h2>
             <div class="details">
                 <div class="col">
